add CI/CD Jenkinsfiles for quiz-service